--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svnmentions (2.3.2) unstable; urgency=medium
+
+  * Fix packaging bug #42
+
+ -- carrvo <carrvo@gmail.com>  Wed, 10 Dec 2025 20:27:25 -0700
+
 svnmentions (2.3.1) unstable; urgency=medium
 
   * Initial release.
