--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+svnmentions (2.3.3) unstable; urgency=medium
+
+  * Fix syntax #45 
+
+ -- carrvo <carrvo@gmail.com>  Thu, 18 Dec 2025 20:28:06 -0700
+
 svnmentions (2.3.2) unstable; urgency=medium
 
   * Fix packaging bug #42
